@@ -1,6 +1,11 @@
 Paste Deployment News
 =====================
 
+svn trunk
+---------
+
+* Added ``paste.deploy.converters.asint()``.
+
 1.3.1
 -----
 
